--- a/restaurant-api/src/main/resources/application.yml
+++ b/restaurant-api/src/main/resources/application.yml
@@ -52,3 +52,9 @@ mapper:
   mappers: com.codeorder.my.mapper.MyMapper
   not-empty: false
   identity: MYSQL
+
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
