--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
             <version>2.1.5</version>
         </dependency>
 
+
+        <!--加入分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
     </dependencies>
 
 
