--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>2.1.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+
+
     </dependencies>
 
 
