--- a/restaurant-api/src/main/resources/application.yml
+++ b/restaurant-api/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
   datasource:                                           # 数据源的相关配置
     type: com.zaxxer.hikari.HikariDataSource          # 数据源类型：HikariCP
     driver-class-name: com.mysql.jdbc.Driver          # mysql驱动
-    url: jdbc:mysql://101.201.239.223:3306/restaurant?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+    url: jdbc:mysql://101.201.239.223:3306/restaurant?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=UTC
     username: root
     password: Tf511925.
     hikari:
