--- a/restaurant-api/pom.xml
+++ b/restaurant-api/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>restaurant-api</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -18,6 +19,15 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
